--- a/index.ipynb
+++ b/index.ipynb
@@ -1,1 +1,217 @@
-{"cells": [{"cell_type": "markdown", "metadata": {}, "source": ["# Pure Python vs. Numpy - Lab\n", "\n", "## Introduction \n", "\n", "Numpy, Scipy, and Pandas provide a significant increase in computational efficiency with complex mathematical operations as compared to Python's built-in arithmetic functions. In this lab, you will calculate and compare the processing speed required for calculating a dot product using both basic arithmetic operations in Python and Numpy's `.dot()` method. \n", "\n", "## Objectives\n", "You will be able to:\n", "\n", "- Compare the performance of high-dimensional matrix operations in Numpy vs. pure Python\n", "\n", "## Problem \n", "\n", "Write a routine to calculate the dot product between two $200 \\times 200$ dimensional matrices using:\n", "\n", "a) Pure Python (no libraries)\n", "\n", "b) Numpy's `.dot()` method \n", "\n", "\n", "### Create two $200 \\times 200$ matrices in Python and fill them with random values using `np.random.rand()` "]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Compare 200x200 matrix-matrix multiplication speed\n", "import numpy as np\n", "\n", "# Set up the variables\n", "A = None\n", "B = None"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Pure Python\n", "\n", "* Initialize a zeros-filled `numpy` matrix\n", "* In Python, calculate the dot product using the formula \n", "\n", "\n", "$$ \\large C_{i,j}= \\sum_k A_{i,k}B_{k,j}$$\n", "\n", "\n", "* Use Python's `timeit` library to calculate the processing time\n", "* [Visit this link](https://www.pythoncentral.io/time-a-python-function/) for an in-depth explanation on how to time a function or routine in Python\n", "\n", "**Hint**: Use a nested `for` loop for accessing, calculating, and storing each scalar value in the resulting matrix. "]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["import timeit\n", "\n", "# Start the timer\n", "start = None\n", "\n", "# Matrix multiplication in pure Python\n", "\n", "\n", "time_spent = None\n", "\n", "print('Pure Python time:', time_spent, 'sec.')"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Numpy \n", "Set the timer and calculate the time taken by the `.dot()` method for multiplying $A$ and $B$ \n"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Start the timer\n", "start = None\n", "\n", "# Matrix multiplication in numpy\n", "\n", "\n", "time_spent = None\n", "print('Numpy time:', time_spent, 'sec.')"]}, {"cell_type": "markdown", "metadata": {}, "source": ["### Your comments"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Summary\n", "\n", "In this lab, you performed a quick comparison between calculating a dot product in Numpy vs pure Python. You saw that Numpy is computationally much more efficient than pure Python code because of the sophisticated implementation of Numpy source code. You're encouraged to always perform time tests to fully appreciate the use of an additional library in Python. "]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.7.3"}}, "nbformat": 4, "nbformat_minor": 2}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pure Python vs. Numpy - Lab\n",
+    "\n",
+    "## Introduction \n",
+    "\n",
+    "Numpy, Scipy, and Pandas provide a significant increase in computational efficiency with complex mathematical operations as compared to Python's built-in arithmetic functions. In this lab, you will calculate and compare the processing speed required for calculating a dot product using both basic arithmetic operations in Python and Numpy's `.dot()` method. \n",
+    "\n",
+    "## Objectives\n",
+    "You will be able to:\n",
+    "\n",
+    "- Compare the performance of high-dimensional matrix operations in Numpy vs. pure Python\n",
+    "\n",
+    "## Problem \n",
+    "\n",
+    "Write a routine to calculate the dot product between two $200 \\times 200$ dimensional matrices using:\n",
+    "\n",
+    "a) Pure Python (no libraries)\n",
+    "\n",
+    "b) Numpy's `.dot()` method \n",
+    "\n",
+    "\n",
+    "### Create two $200 \\times 200$ matrices in Python and fill them with random values using `np.random.rand()` "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((200, 200), (200, 200))"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compare 200x200 matrix-matrix multiplication speed\n",
+    "import numpy as np\n",
+    "\n",
+    "# Set up the variables\n",
+    "A = np.random.rand(200,200)\n",
+    "B = np.random.rand(200,200)\n",
+    "\n",
+    "A.shape, B.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pure Python\n",
+    "\n",
+    "* Initialize a zeros-filled `numpy` matrix\n",
+    "* In Python, calculate the dot product using the formula \n",
+    "\n",
+    "\n",
+    "$$ \\large C_{i,j}= \\sum_k A_{i,k}B_{k,j}$$\n",
+    "\n",
+    "\n",
+    "* Use Python's `timeit` library to calculate the processing time\n",
+    "* [Visit this link](https://www.pythoncentral.io/time-a-python-function/) for an in-depth explanation on how to time a function or routine in Python\n",
+    "\n",
+    "**Hint**: Use a nested `for` loop for accessing, calculating, and storing each scalar value in the resulting matrix. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pure Python time: 5.906584510987159 sec.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import timeit\n",
+    "\n",
+    "# Start the timer\n",
+    "start = timeit.default_timer()\n",
+    "\n",
+    "# Matrix multiplication in pure Python\n",
+    "\n",
+    "out2 = np.zeros((200,200))\n",
+    "\n",
+    "for i in range(200):\n",
+    "    for j in range(200):\n",
+    "        for k in range(200):\n",
+    "            \n",
+    "            out2[i, k] += A[i, k] * B[k, j]\n",
+    "\n",
+    "time_spent = timeit.default_timer() - start\n",
+    "\n",
+    "print('Pure Python time:', time_spent, 'sec.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Numpy \n",
+    "Set the timer and calculate the time taken by the `.dot()` method for multiplying $A$ and $B$ \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numpy time: 0.0015417870017699897 sec.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Start the timer\n",
+    "start = timeit.default_timer()\n",
+    "\n",
+    "# Matrix multiplication in numpy\n",
+    "C = A.dot(B)\n",
+    "\n",
+    "time_spent = timeit.default_timer() - start\n",
+    "\n",
+    "print('Numpy time:', time_spent, 'sec.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Your comments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Numpy is much much faster"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "\n",
+    "In this lab, you performed a quick comparison between calculating a dot product in Numpy vs pure Python. You saw that Numpy is computationally much more efficient than pure Python code because of the sophisticated implementation of Numpy source code. You're encouraged to always perform time tests to fully appreciate the use of an additional library in Python. "
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
